# backend-peter_mourad-django-training

./: .gitignore  pyproject.toml
albums/: admin.py  forms.py  models.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_artist_name.py  0002_alter_album_options_song.py  0002_alter_song_name.py  0003_album_isverified.py  0003_rename_album_name_song_album_alter_song_name.py  0004_alter_album_created_at.py  0005_alter_album_isverified.py  0006_alter_album_created_at.py  0007_alter_album_created_at.py  0008_remove_album_isverified_album_is_verified.py
albums/templates/: album_form.html
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_options.py  0002_remove_artist_albums.py
artists/templates/: artist_form.html  artists_list.html
authentication/: serializers.py  urls.py  views.py
musicplatform/: RESULTS.md  settings.py  urls.py
templates/: layout.html  login_form.html
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_bio.py
