[tool.poetry]
name = "backend-peter-mourad-django-training"
version = "0.1.0"
description = ""
authors = ["peter-mourad <pmourad772@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_peter_mourad_django_training"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
psycopg2 = "^2.9.4"
dotenv = "^0.0.5"
django-imagekit = "^4.1.0"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
